--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,31 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.jumbotron{
+.jumbotron {
     padding: 20px;
     border-radius: 0px;
+    background: black;
+    color: lightgrey;
 
 }
 
 .gif-button {
     margin: 20px;
     text-transform: capitalize;
+}
+
+
+.gif-rating {
+   
+    margin-top: 30px ;
+    margin-bottom: 10px;
+}
+
+.text-center{
+    text-align: center!important;
+    font-size: 24px;
+    font-weight: bolder;
+    color: purple
+    
 }
 
