--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body{
     margin-bottom: 10px;
 }
 
-.text-center{
+.textRate{
     text-align: center!important;
     font-size: 24px;
     font-weight: bolder;
